Fixed row break on next button.

--- a/src/components /CreateAdNextPrev/CreateAdNextPrev.scss
+++ b/src/components /CreateAdNextPrev/CreateAdNextPrev.scss
@@ -11,13 +11,13 @@
   @media only screen and (max-width: 768px) {
     background-color: white;
   }
-.back-container{
-  margin-left: 20px;
-  display: flex;
-  align-items: center;
-}
+  .back-container {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+  }
   a {
-    font-size: 1.5rem;
+    font-size: clamp(1.2rem, 2.8vw, 1.5rem);
     text-decoration: none;
     color: $dark-blue;
   }
@@ -51,7 +51,6 @@
       width: 120px;
       background-color: $dark-blue;
       box-shadow: 0px 2px 2px 3px rgba(123, 124, 123, 0.2);
-
     }
 
     a {
